# license_api

./: .coverage  .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  codecov.yml  pyproject.toml
.github/workflows/: test.yml
app/: admin.py  auth.py  config.py  database.py  main.py  schemas.py
app/api/: auth_router.py  deps.py  user_router.py  websocket_router.py
app/bot/: bot.py  kb.py  state.py
app/bot/handlers/: admin.py  start.py
app/bot/middleware/: admin.py
app/db/: database.py
app/repos/: user.py
app/schemas/: user.py
app/services/: auth_service.py  bot_service.py  user_service.py  websocket_service.py
app/utils/: helpers.py
templates/: base.html  create_adm.html  index.html  panel.html
tests/: conftest.py  test_auth.py  test_config.py  test_database.py  test_deps.py  test_main.py  test_schemas.py  test_user.py  test_user_repo.py
