[project]
name = "license-backend"
version = "0.1.0"
description = "LicenseAPI - Software protection API made with FastAPI, SQLModel, aiogram"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.21.0",
    "aiogram-dialog>=2.4.0",
    "aioredis>=2.0.1",
    "anyio>=4.9.0",
    "argon2-cffi>=25.1.0",
    "coverage>=7.8.2",
    "fastapi-limiter>=0.1.6",
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
    "isort>=6.0.1",
    "jinja2>=3.1.6",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.9.1",
    "pyjwt>=2.10.1",
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
    "sqlmodel>=0.0.24",
    "trio>=0.30.0",
]

[dependency-groups]
test = [
    "httpx>=0.28.1",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.1.1",
]
